--- a/dadi/assets/css/style.css
+++ b/dadi/assets/css/style.css
@@ -17,3 +17,15 @@
   align-items: center;
   box-shadow: 5px 5px 2.5px rgb(17, 134, 202);
 }
+
+a {
+  text-decoration: none;
+  font-size: 30px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: crimson;
+  color: black;
+  padding: 10px;
+  border-radius: 20px;
+}
