Termino il bonus dei dadi

--- a/dadi/assets/css/style.css
+++ b/dadi/assets/css/style.css
@@ -5,7 +5,9 @@
 
 #giocatore,
 #computer,
-#vincitore {
+#vincitore,
+#giocate,
+#pareggio {
   height: 200px;
   text-align: center;
   border-radius: 20px;
